2015-06-09  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/functions_form.php
	  include/functions_db.php
	  include/functions_groups.php
	  include/functions_user.php
	  operation/incidents/incident_detail.php: Show the hierarchy 
	of groups in combos.

2015-06-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_form.php: Detecting URLs in
	workunits.

	* operation/inventories/inventory_search.php: Show untyped 
	objects in the hierarchy.

2015-06-08  Vanessa Gil <vanessa.gil@artica.es>
	

	* godmode/setup/incidents_setup.php
	  include/functions_db.php
	  operation/incidents/incident_detail.php: Added
	token in setup to not allow select a empty ticket type.

2015-06-04  Vanessa Gil <vanessa.gil@artica.es>
	
	* extras/mr/23.sql: Added file.

	* operation/inventories/manage_objects_type_fields.php: Added
	help tip.

2015-06-04  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  operation/inventories/manage_objects_type_fields.php
	  operation/inventories/manage_objects_type_list.php: Not allow 
	fields update when flag 'not_allow_updates' is checked.
	Ticket #2298.

2015-06-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/inventories/inventory_detail.php: Fixed
	bug updating inventory. Ticket #2297.

2015-06-01  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_incidents.php: Added fields
	for export to csv.
	  
	* operation/companies/company_detail.php: Changed
	invoice acls.

2015-05-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_incidents.php
	  include/functions_inventories.php: Fixed bug
	importing objects from csv.

2015-05-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  extras/import_users_from_csv.php
	  extras/migrate.sql
	  general/home.php
	  godmode/usuarios/configurar_usuarios.php
	  godmode/grupos/configurar_grupos.php
	  godmode/grupos/lista_grupos.php
	  include/functions_api.php
	  include/functions_user.php